# learn_CMake

01/: CMakeLists.txt
02/: CMakeLists.txt  main.c
03/: CMakeLists.txt
03/include/: hello.h
03/src/: hello.c  main.c
